--- a/Assets/Editor/Test.uxml
+++ b/Assets/Editor/Test.uxml
@@ -3,6 +3,7 @@
         <ui:Label text="InGameEditor" display-tooltip-when-elided="true" style="font-size: 30px; height: 40px; -unity-text-align: middle-left; background-color: rgb(0, 0, 0);" />
         <ui:VisualElement style="justify-content: flex-end;">
             <uie:FloatField label="게임 스피드" value="1" name="GameSpeed" text="소울 추가" />
+            <uie:IntegerField label="골드량" value="100" name="GoldAmount" />
         </ui:VisualElement>
     </ui:IMGUIContainer>
 </ui:UXML>
